--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^7.2.0",
     "@mui/material-nextjs": "^7.2.0",
     "@prisma/client": "^6.13.0",
+    "isomorphic-dompurify": "^2.26.0",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.5",
